<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GameMain">


    <ImageView
        android:id="@+id/main_imgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/mainui"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_hdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/logo"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imgFrame1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Match Words" />


    <FrameLayout
        android:id="@+id/imgFrame1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/imgFrame2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/play"
            android:scaleType="centerInside"
            android:src="@drawable/btn_normal" />

        <TextView
            android:id="@+id/imgTitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/user"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/imgFrame2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/imgFrame3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/main_imgView"
        app:layout_constraintTop_toBottomOf="@+id/imgFrame1">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/login"
            android:scaleType="centerInside"
            android:src="@drawable/btn_normal" />

        <TextView
            android:id="@+id/imgTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/play"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/imgFrame3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/sub_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFrame2">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/about"
            android:scaleType="centerInside"
            android:src="@drawable/btn_normal" />

        <TextView
            android:id="@+id/imgTitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/about"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

    </FrameLayout>



    <TextView
        android:id="@+id/sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:text="@string/sub_title"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFrame3"
        tools:text="TuteHub presents @2019" />


</androidx.constraintlayout.widget.ConstraintLayout>